--- a/public/partials/tutorial/StrategiesController.html
+++ b/public/partials/tutorial/StrategiesController.html
@@ -1,54 +1,47 @@
-<h5 class="text-error"><i class="icon-wave2"></i> Стратегии</h5>
-<p>
-    Стратегии - так мы назвали последовательность, по которой наш диктор будет надиктовывать оригинал слова и его перевод
-    при подготовке mp3-файла.
+<h5 class="text-error"><i class="icon-wave2"></i> <span translate="TUTORIAL_STRATEGIES_1"></span></h5>
+<p translate="TUTORIAL_STRATEGIES_2">
+
 </p>
 <div class="well">
-    <p>Мы создали три типа повторения:</p>
+    <p translate="TUTORIAL_STRATEGIES_3"></p>
     <ul class="square">
-        <li><span class="text-info">Оригинал</span></li>
-        <li><span class="text-success">Перевод</span></li>
-        <li><span class="text-warning">Тишина</span></li>
+        <li><span class="text-info" translate="TEXT_ORIGINAL"></span></li>
+        <li><span class="text-success" translate="TEXT_TRANSLATION"></span></li>
+        <li><span class="text-warning" translate="TEXT_SILENT"></span></li>
     </ul>
 </div>
 <hr>
-<h5 class="text-error"><i class="icon-info"></i> Как это работает</h5>
-<p>Создавая стратегию, вы можете определить, последовательность <span class="text-info">Оригинала</span>, <span
-        class="text-warning">Тишины</span> и <span class="text-success">Перевода</span> для записи в mp3-файл.</p>
-<p>К примеру вы можете создать стратегию, где вообще нет <span class="text-warning">Тишины</span> и добавить в нее
-    только последовательность <span class="text-info">Оригинала</span> и <span class="text-success">Перевода</span>.</p>
+<h5 class="text-error"><i class="icon-info"></i> <span translate="TUTORIAL_STRATEGIES_4"></span></h5>
+<p translate="TUTORIAL_STRATEGIES_14"></p>
+<p translate="TUTORIAL_STRATEGIES_15"></p>
 <div class="well">
-    <p>Если создать стратегию, для заучиваемого слова "Hello", с переводом "Здравствуйте", с такой
-        последовательностью:</p>
+    <p translate="TUTORIAL_STRATEGIES_5"></p>
     <ol>
-        <li><span class="text-success">Перевод</span></li>
-        <li><span class="text-info">Оригинал</span></li>
-        <li><span class="text-success">Перевод</span></li>
-        <li><span class="text-info">Оригинал</span></li>
+        <li><span class="text-success" translate="TEXT_TRANSLATION"></span></li>
+        <li><span class="text-info" translate="TEXT_ORIGINAL"></span></li>
+        <li><span class="text-success" translate="TEXT_TRANSLATION"></span></li>
+        <li><span class="text-info" translate="TEXT_ORIGINAL"></span></li>
     </ol>
-    <p>Тогда в mp3-файле будет записано:</p>
+    <p translate="TUTORIAL_STRATEGIES_6"></p>
 
-    <p class="text-semibold text-center"> Здравствуйте - Hello - Здравствуйте - Hello</p>
+    <p class="text-semibold text-center" translate="TUTORIAL_STRATEGIES_7"></p>
 </div>
 <hr>
-<h5 class="text-warning"><i class="icon-pause2"></i> Тишина</h5>
-<p>Тишина полезна, если вы:</p>
-<h6 class="text-error">Хотите проверить себя.</h6>
+<h5 class="text-warning"><i class="icon-pause2"></i> <span translate="TEXT_SILENT"></span></h5>
+<p translate="TUTORIAL_STRATEGIES_8"></p>
+<h6 class="text-error" translate="TUTORIAL_STRATEGIES_9"></h6>
 <div class="well">
-    <p>
-        К примеру, диктор произносит оригинал, на время паузы, вы пытаетесь вспомнить как переводится оригинальное
-        слово, после паузы, диктор произносит перевод.
+    <p translate="TUTORIAL_STRATEGIES_10">
+
     </p>
-    <p>
-        Или совсем наоборот, диктор произносит перевод слова, на время паузы вы пытаетесь вспомнить как произнесённое
-        слово будет на иностранно языке, после паузы диктор произнесёт правильный ответ.
+    <p translate="TUTORIAL_STRATEGIES_11">
+
     </p>
 </div>
 <br/>
-<h6 class="text-error">Хотите научится произносить слова.</h6>
+<h6 class="text-error" translate="TUTORIAL_STRATEGIES_12"></h6>
 <div class="well">
-    <p>
-        Вы можете создать стратегию, где после оригинала, есть пауза, которую можно использовать для повторения
-        оригинального слова. Повторения оригинала, паузы и перевода можно вставлять в стратегию сколько угодно раз.
+    <p translate="TUTORIAL_STRATEGIES_13">
+
     </p>
 </div>
