--- a/public/partials/tutorial/WordsController.html
+++ b/public/partials/tutorial/WordsController.html
@@ -1,31 +1,28 @@
-<h5 class="text-error"><i class="icon-trophy-star"></i> В двух словах</h5>
-<p>
-Данные сервис - это еще один способ улучшить уровень вашего иностранного языка.
+<h5 class="text-error"><i class="icon-trophy-star"></i> <span translate="TUTORIAL_WORDS_1"></span></h5>
+<p translate="TUTORIAL_WORDS_2">
+
 </p>
-<p>
-На выходе, вы получите заведённые вами слова, в виде mp3-файлов.
-Каждый mp3-файл будет содержать произношение ваших слов, в той последовательности,
-которую вы можете определить сами. Полученные mp3-файлы можно слушать в комфортном для вас месте.
+<p translate="TUTORIAL_WORDS_3">
+
 </p>
-<p>
-В Интернете можно встретить много подготовленных наборов слов, записанные диктором, в данном сервисе, вы можете сами создавать такие наборы, в добавок самому определять в какой последовательности диктору следует произносить ваши слова.
+<p translate="TUTORIAL_WORDS_4">
 </p>
 <hr>
-<h5 class="text-error"><i class="icon-volume-medium"></i> Слова</h5>
-<p>
-На данной страницы, вы можете собирать слова, которые вы бы хотели запомнить лучше или выучить.
+<h5 class="text-error"><i class="icon-volume-medium"></i> <span translate="TUTORIAL_WORDS_5"></span></h5>
+<p translate="TUTORIAL_WORDS_6">
+
 </p>
-<p>
-К примеру, вы ходите на курсы иностранного языка, на них вы встречаете новые иностранные слова, и чтобы их лучше запомнить, их можно внести на этой странице, скачать произношение, затем, к примеру, по дороге домой, вы можете непринужденно прослушать и повторять новые слова.
+<p translate="TUTORIAL_WORDS_7">
+
 </p>
-<p>
-Таким же образом можно заводить любые слова, которые вы встретили и хотели бы выучить.
+<p translate="TUTORIAL_WORDS_8">
+
 </p>
-<p>
-Слова - это не предел, вы можете вносить хоть целые предложения.
+<p translate="TUTORIAL_WORDS_9">
+
 </p>
 <hr>
-<h5 class="text-error"><i class="icon-folder8"></i> Группы</h5>
-<p>
-Для большей организации слов, вы можете разбивать их по группам.
+<h5 class="text-error"><i class="icon-folder8"></i> <span translate="TUTORIAL_WORDS_10"></span></h5>
+<p translate="TUTORIAL_WORDS_11">
+
 </p>
