--- a/public/partials/words/group-add.html
+++ b/public/partials/words/group-add.html
@@ -3,25 +3,25 @@
     <div class="panel panel-default">
 
         <div class="panel-heading">
-            <h6 class="panel-title"><i class="icon-file-plus"></i> Добавление группы</h6>
+            <h6 class="panel-title"><i class="icon-file-plus"></i> <span translate="TEXT_ADDING_GROUP"></span></h6>
         </div>
 
         <div class="panel-body">
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-12">
-                        <label>Название:</label>
+                        <label translate="LABEL_NAME"></label>
                         <input type="text" class="form-control input-lg" ng-model="newGroupTitle" required>
-                            <span class="forms-desc" ng-show="addGroupForm.name.$error.minlength">
-                            Минимальная длинна три символа.
+                            <span class="forms-desc" ng-show="addGroupForm.name.$error.minlength" translate="TEXT_WORD_LIMITATION">
+
                         </span>
                     </div>
                 </div>
             </div>
 
             <div class="form-actions text-right">
-                <button type="button" class="btn btn-default" ng-click="$parent.isAddingNewGroup = false;">Отмена</button>
-                <button type="submit" class="btn btn-success" ng-disabled="addGroupForm.$invalid">Добавить</button>
+                <button type="button" class="btn btn-default" ng-click="resetPageParameters()" translate="BUTTON_CANCEL"></button>
+                <button type="submit" class="btn btn-success" ng-disabled="addGroupForm.$invalid" translate="BUTTON_ADD"></button>
             </div>
         </div>
 
