--- a/public/templates/packages.html
+++ b/public/templates/packages.html
@@ -6,7 +6,7 @@
     <!-- Page header -->
     <div class="page-header">
         <div class="page-title">
-            <h3>Пакеты слов <small>Пакеты слов для закачки.</small></h3>
+            <h3><span translate="TITLE_PACKS"></span> <small translate="TEXT_PACKAGES_PAGE_DESC"></small></h3>
         </div>
     </div>
     <!-- /page header -->
